--- a/test_env/board_ctrl/node.config
+++ b/test_env/board_ctrl/node.config
@@ -1,3 +1,3 @@
 {controller_pods,['pod_controller@asus']}.
 {sd_pods,['pod_controller@asus']}.
-{files_dirs_to_keep,["Makefile","node.config","nodes.config","node_controller"]}.
+{files_dirs_to_keep,["Makefile","node.config","nodes.config","nodes_simple.config","node_controller","josca"]}.
